# PDFCompressor

./: .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md  __version__.py  app.py  build.spec  config.py  pyproject.toml
.github/workflows/: build.yml
compress/: __init__.py  engine.py  profiles.py  task_manager.py
locales/: en.json  zh.json
routes/: compress.py  health.py  upload.py
scripts/: build_mac.sh  build_windows.bat
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_compress.py  test_engine.py  test_upload.py
